FEAT: (MOISAM-218) 플랫폼 스레드 2개로 관리하도록 변경한다