@@ -26,45 +26,43 @@ public class RouteAssembler {
     private final RouteFetcher routeFetcher;
 
     public CompletableFuture<MeetingPointRouteGroup> assemble(List<StartPoint> startPoints, Subway subway) {
-        ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
+        try (ExecutorService executor = Executors.newFixedThreadPool(2)) {
+            List<CompletableFuture<RouteResponse>> routeFutures = startPoints.stream()
+                    .map(startPoint -> CompletableFuture.supplyAsync(() -> routeFetcher.fetch(startPoint, subway), executor))
+                    .toList();
 
-        List<CompletableFuture<RouteResponse>> routeFutures = startPoints.stream()
-                .map(startPoint -> CompletableFuture.supplyAsync(() -> routeFetcher.fetch(startPoint, subway), executor))
-                .toList();
+            CompletableFuture<List<RouteResponse>> allRoutesFuture = CompletableFuture.allOf(routeFutures.toArray(new CompletableFuture[0]))
+                    .thenApply(v -> routeFutures.stream()
+                            .map(routeFuture -> {
+                                try {
+                                    return routeFuture.get();
+                                } catch (Exception e) {
+                                    log.warn("[RouteAssembler] Failed fetching route", e);
+                                    return null;
+                                }
+                            })
+                            .filter(Objects::nonNull)
+                            .collect(Collectors.toList()));
 
-        CompletableFuture<List<RouteResponse>> allRoutesFuture = CompletableFuture.allOf(routeFutures.toArray(new CompletableFuture[0]))
-                .thenApply(v -> routeFutures.stream()
-                        .map(routeFuture -> {
-                            try {
-                                return routeFuture.get();
-                            } catch (Exception e) {
-                                log.warn("[RouteAssembler] Failed fetching route", e);
-                                return null;
-                            }
-                        })
-                        .filter(Objects::nonNull)
-                        .collect(Collectors.toList()));
+            CompletableFuture<ClosestParkingLot> closestParkingLotFuture =
+                    CompletableFuture.supplyAsync(() -> parkingLotFinder.findClosestParkingLot(subway.getPoint()), executor);
 
-        CompletableFuture<ClosestParkingLot> closestParkingLotFuture =
-                CompletableFuture.supplyAsync(() -> parkingLotFinder.findClosestParkingLot(subway.getPoint()), executor);
+            CompletableFuture<Void> combinedFuture = CompletableFuture.allOf(allRoutesFuture, closestParkingLotFuture);
+            return combinedFuture.thenApply(v -> {
+                try {
+                    List<RouteResponse> routes = allRoutesFuture.get();
+                    ClosestParkingLot closestParkingLot = closestParkingLotFuture.get();
 
-        CompletableFuture<Void> combinedFuture = CompletableFuture.allOf(allRoutesFuture, closestParkingLotFuture);
-        return combinedFuture.thenApply(v -> {
-            try {
-                List<RouteResponse> routes = allRoutesFuture.get();
-                ClosestParkingLot closestParkingLot = closestParkingLotFuture.get();
-
-                if (routes == null || routes.isEmpty()) {
-                    log.warn("[RouteAssembler] No routes found for subway: {}", subway);
+                    if (routes == null || routes.isEmpty()) {
+                        log.warn("[RouteAssembler] No routes found for subway: {}", subway);
+                        return null;
+                    }
+                    return MeetingPointRouteGroup.of(routes, subway, closestParkingLot);
+                } catch (Exception e) {
+                    log.warn("[RouteAssembler] Failed assembling MeetingPointRouteGroup", e);
                     return null;
                 }
-                return MeetingPointRouteGroup.of(routes, subway, closestParkingLot);
-            } catch (Exception e) {
-                log.warn("[RouteAssembler] Failed assembling MeetingPointRouteGroup", e);
-                return null;
-            } finally {
-                executor.shutdown();
-            }
-        });
+            });
+        }
     }
 }
